updating Readme with description

--- a/readme
+++ b/readme
@@ -5,3 +5,10 @@ IOS Assignment - 1
 Student Name and Aid
 Talwinder Saini - A00430396
 Nishant Malhotra - A00430215
+
+
+Description -
+
+The app contains 5 pages. First and last are welcome and good bye pages and rest 3 are game questions. 
+If we click "Cancel" on any page, then we will be redirected to home page. 
+Clicking wrong answer will give alert and right answer will redirect to next question.
